feat: criado rota para remover integracao de agente
