# internal/app/integrations/chatvolt/agent/controller/agent_controller.go
@@ -4,7 +4,9 @@ import (
 	binding "Synapse/internal/app/integrations/binding/chatvolt/agent"
 	dto "Synapse/internal/app/integrations/chatvolt/agent/dto"
 	service "Synapse/internal/app/integrations/chatvolt/agent/service"
+	print "Synapse/internal/configuration/logger/log_print"
 	"Synapse/internal/configuration/rest_err"
+	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -63,7 +65,7 @@ func (ac *AgentController) PostAgentConfig(ctx *gin.Context) {
 			return
 		default:
 			restErr := rest_err.NewInternalServerError("Erro ao salvar configuração do agente", []rest_err.Causes{
-				rest_err.NewCause("service", err.Error()),
+				rest_err.NewCause("service", ""),
 			})
 			ctx.JSON(restErr.Code, restErr)
 			return
@@ -184,6 +186,63 @@ func (ac *AgentController) PutAgentConfigByID(ctx *gin.Context) {
 	ctx.Status(http.StatusNoContent)
 }
 
+// DeleteAgentConfigByID godoc
+// @Summary      Remover configuração do agente Chatvolt
+// @Description  Remove a configuração salva de um agente da Chatvolt com base no ID informado na URI
+// @Tags         v1 - Integração Chatvolt
+// @Accept       json
+// @Produce      json
+// @Param        Authorization header string true "Token de integração no formato: Bearer {token}"
+// @Param        agent_id path int true "ID do agente registrado no sistema"
+// @Success      204 "Remoção bem-sucedida, sem conteúdo"
+// @Failure      400 {object} rest_err.RestErr "AgentID inválido ou erro de validação"
+// @Failure      404 {object} rest_err.RestErr "Configuração do agente não encontrada"
+// @Failure      500 {object} rest_err.RestErr "Erro interno ao remover configuração"
+// @Router       /integrations/v1/chatvolt/agent/config/{agent_id} [delete]
+func (ac *AgentController) DeleteAgentConfigByID(ctx *gin.Context) {
+	var req dto.RemoveConfiguracoesAgentRequestDTO
+
+	// Faz o binding do path param
+	if err := ctx.ShouldBindUri(&req); err != nil {
+		restErr := rest_err.NewBadRequestValidationError("AgentID inválido na URI", []rest_err.Causes{
+			rest_err.NewCause("agent_id", err.Error()),
+		})
+		ctx.JSON(restErr.Code, restErr)
+		return
+	}
+
+	// Validação manual (separada, caso queira mensagens personalizadas)
+	if err := binding.ValidateRemoveConfiguracaoAgentRequestDTO(req); err != nil {
+		restErr := rest_err.NewBadRequestValidationError("Validação falhou para o agent_id", []rest_err.Causes{
+			rest_err.NewCause("validação", err.Error()),
+		})
+		ctx.JSON(restErr.Code, restErr)
+		return
+	}
+
+	// Remove configuracao pelo service
+	err := ac.service.DeleteConfigByID(ctx, req.AgentID)
+	if err != nil {
+		switch {
+		case err.Error() == "configuração não encontrada":
+			restErr := rest_err.NewNotFoundError("Configuração do agente não encontrada")
+			ctx.JSON(restErr.Code, restErr)
+			return
+		default:
+			restErr := rest_err.NewInternalServerError("Erro ao remover configuração do agente", []rest_err.Causes{
+				rest_err.NewCause("service", err.Error()),
+			})
+			print.Info(fmt.Sprintf("[AgentController] Erro ao remover configuração do agente: %s", err.Error()))
+			ctx.JSON(restErr.Code, restErr)
+			return
+		}
+
+	}
+
+	ctx.Status(http.StatusNoContent)
+
+}
+
 // GetAgentConfigByID godoc
 // @Summary      Buscar configuração do agente Chatvolt
 // @Description  Retorna os dados públicos da configuração de um agente da Chatvolt por ID
@@ -237,5 +296,30 @@ func (ac *AgentController) GetAgentConfigByID(ctx *gin.Context) {
 
 	// Transforma o modelo em DTO limitado e retorna
 	resp := dto.ToFormConfiguracaoAgentResponse(config)
+	ctx.JSON(http.StatusOK, resp)
+}
+
+// GetAllAgentsByEmpresaID godoc
+// @Summary      Listar agentes por empresa
+// @Description  Retorna todos os agentes associados a uma empresa específica
+// @Tags         v1 - Integração Chatvolt
+// @Accept       json
+// @Produce      json
+// @Param        Authorization header string true "Token de integração no formato: Bearer {token}"
+// @Success      200 {array} dto.ListConfiguracoesAgentResponseDTO
+// @Failure      500 {object} rest_err.RestErr
+// @Router       /integrations/v1/chatvolt/agent [get]
+func (ac *AgentController) GetAllAgentsByEmpresaID(ctx *gin.Context) {
+	// Agora sim com enterpriseID corretamente extraído
+	agents, err := ac.service.BuscarAgentesPorEmpresaID(ctx)
+	if err != nil {
+		restErr := rest_err.NewInternalServerError("Erro ao buscar agentes", []rest_err.Causes{
+			rest_err.NewCause("service", err.Error()),
+		})
+		ctx.JSON(restErr.Code, restErr)
+		return
+	}
+
+	resp := dto.FromModelList(agents)
 	ctx.JSON(http.StatusOK, resp)
 }
